Fixing menu overflow bug

--- a/src/layout/_menu.scss
+++ b/src/layout/_menu.scss
@@ -14,42 +14,39 @@ $size-menu-padding: 12px;
 		border: none;
 	}
 }
-
 //submenu
-.menu	ul {
+.menu ul {
 	background: #fff;
 	border: 1px solid $color-default-border;
 	border-radius: $size-default-radius;
-	
 	//position at bottom-center of it's parent
 	top: 100%;
 	left: 50%;
-	margin: 0;
-	margin-left: -1 * ($size-menu-width + (2 * $size-menu-padding))/2 ;
-	opacity: 0;
-	transition: opacity 0.3s ease-in-out;
-
+	margin: 0 0 0 -1 * ($size-menu-width + (2 * $size-menu-padding))/2;
+	opacity: 1;
+	transition: all 0.3s ease-in-out;
 	padding: 0 $size-menu-padding;
 	float: left;
 	text-align: left;
 	position: absolute;
 	font-size: 90%;
 	line-height: 3;
-	visibility: hidden;
+	transform: scale(0);
+  transform-origin: center top;
 	z-index: 99999;
-
 	//submenu's submenu
-	ul {		
+	ul {
 		font-size: 100%;
 		left: 100%;
 		top: -1px;
+	  transform-origin: left top;
 		margin-left: 0;
 		border-left: 0;
 		border-top-left-radius: 0;
 		border-bottom-left-radius: 0;
 	}
 
-	li {		
+	li {
 		color: $color-text;
 		border-bottom: 1px solid $color-default-border;
 		text-align: center;
@@ -65,26 +62,25 @@ $size-menu-padding: 12px;
 		width: 140px;
 	}
 }
-
 // submenu expand
-.menu li:hover > ul,
-.menu li.focus > ul {
-	visibility: visible;
-	opacity: 1;
+.menu li.focus > ul,
+.menu li:hover > ul {
+  opacity: 1;
+  transform: scale(1);
 }
-
 // submenu arrow
-.menu ul:after, .menu ul:before {
-    bottom: 100%;
-    border: solid transparent;
-    content: " ";
-    height: 0;
-    width: 0;
-    position: absolute;
-    pointer-events: none;
+.menu ul:after,
+.menu ul:before {
+	bottom: 100%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
 }
 
-.menu ul:before {  
+.menu ul:before {
 	border-bottom-color: $color-default-border;
 	border-width: 12px;
 	left: 50%;
@@ -92,12 +88,13 @@ $size-menu-padding: 12px;
 }
 
 .menu ul:after {
-    border-bottom-color: #fff;
-    border-width: 10px;
-    left: 50%;
-    margin-left: -10px;
+	border-bottom-color: #fff;
+	border-width: 10px;
+	left: 50%;
+	margin-left: -10px;
 }
 
-.menu ul ul:before, .menu ul ul:after {
+.menu ul ul:after,
+.menu ul ul:before {
 	border: 0;
 }
